# Analysis-Framework

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  README.zh-HK.md  main.py  pyproject.toml
.github/workflows/: mimo-claude.yml
configs/: default.yaml
configs/pipelines/: basic_analysis.yaml  json_analysis.yaml
data/raw/: example.csv  example.json
examples/: run_basic_analysis.py
scripts/: run_pipeline.py  validate_config.py
src/analysis_framework/: __init__.py  cli.py  constants.py  exceptions.py  registry.py
src/analysis_framework/algorithms/: __init__.py
src/analysis_framework/algorithms/preprocessing/: __init__.py  missing_values.py
src/analysis_framework/algorithms/statistics/: __init__.py  correlation.py  descriptive.py  frequency.py
src/analysis_framework/config/: __init__.py  loader.py  schema.py
src/analysis_framework/core/: __init__.py  base.py  pipeline.py  result.py
src/analysis_framework/dataio/: __init__.py  readers.py  writers.py
tests/: test_pipeline.py  test_readers.py  test_registry.py
